{
    "name": "InputActions",
    "maps": [
        {
            "name": "UI",
            "id": "1f6e572a-1532-404d-8b2d-0c1f201bfffe",
            "actions": [
                {
                    "name": "OnTouch",
                    "type": "Button",
                    "id": "d5220387-d45b-4f05-9a51-554cadc2adc5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "9048a613-76b0-4dcc-98b6-361398055366",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62d50a5f-a72d-4c75-b598-d2f5e336d470",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3560b755-fe08-47b8-8cad-31731d6e11c3",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": []
        }
    ]
}